# e57_metadata

./: .gitignore  CMakeLists.txt  Dockerfile  e57_metadata.sln
cmake/modules/: FindCereal.cmake  FindE57Ref.cmake  FindE57Ref.cmake~  FindEigen.cmake  FindXerces.cmake  FindXerces.cmake~
e57_metadata/: data_types.hpp  e57_metadata.hpp  e57_metadata.vcxproj  extractor.cpp  libe57_serialize.hpp  osdef.hpp
e57_metadata_wrapper/: Program.cs  e57_metadata_wrapper.cs  e57_metadata_wrapper.csproj
test_cpplib/: main.cpp  test_cpplib.vcxproj
